--- a/STT.html
+++ b/STT.html
@@ -8,9 +8,9 @@
 
 <body>
     <div>
-        <p>
-            コンテンツ
-        </p>
+      <p style="color: red;">
+          コンテンツ
+      </p>
     </div>
 </body>
 
